--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
 
-    
-
     <!-- Google Fonts -->
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Merriweather:wght@400;700&family=Inter:wght@400;600&display=swap"
@@ -49,7 +47,6 @@
 
         gtag('config', 'G-6RZP5DGP0E', { 'send_page_view': false });
     </script>
-    <script type="text/babel" src="legadoAfricano.js"></script>
 </head>
 
 <body>
@@ -1776,7 +1773,148 @@ const HistoriaContent = ({
         </div>
     );
 };
-        
+        // Componente Legado Africano (Atualizado)
+        const LegadoAfricano = () => {
+            useEffect(() => {
+                document.title = "Legado Afro-brasileiro e Indígena - Historin";
+
+                // Atualizar a meta descrição
+                let metaDescription = document.querySelector('meta[name="description"]');
+                if (metaDescription) {
+                    metaDescription.setAttribute('content', 'Descubra a história do legado afro-brasileiro e indígena em Gramado e como esses povos contribuíram para a cultura e formação da cidade.');
+                } else {
+                    metaDescription = document.createElement('meta');
+                    metaDescription.name = "description";
+                    metaDescription.content = 'Descubra a história do legado afro-brasileiro e indígena em Gramado e como esses povos contribuíram para a cultura e formação da cidade.';
+                    document.head.appendChild(metaDescription);
+                }
+            }, []);
+
+            // IDs das histórias selecionadas manualmente
+            const selectedStoryIds = [49, 50, 51]; // Substitua pelos IDs reais
+
+            // Filtrar as histórias com base nos IDs selecionados
+            const historiasLegadoAfricano = historias.filter(historia => selectedStoryIds.includes(historia.id));
+
+            return (
+                <div className="p-4 w-full lg:w-4/5">
+                    <header className="flex justify-between items-center mb-4">
+                        <div className="text-2xl cursor-pointer">
+                            <Link to="/">
+                                <i className="fas fa-arrow-left"></i>
+                            </Link>
+                        </div>
+                        <h1 className="text-lg font-bold">Legado Afro-brasileiro e Indígena</h1>
+                        <div className="w-10 h-10"></div>
+
+                    </header>
+
+                    {/* Seção de Introdução */}
+                    <section className="mb-6">
+                        <h2 className="text-center text-xl font-bold mb-4">A Importância da Inclusão Histórica</h2>
+                        <p className="text-justify">
+                            Gramado, como muitas cidades do sul do Brasil, é amplamente reconhecida por sua herança europeia, principalmente alemã, italiana e portuguesa. Essas histórias são constantemente celebradas e lembradas, porém, a história dos negros afro-brasileiros na região muitas vezes permanece invisibilizada. Essa página é dedicada a dar voz àqueles que foram fundamentais na construção da cidade, mas cujas histórias foram apagadas ou esquecidas ao longo do tempo. O projeto Historin busca corrigir essa lacuna, destacando a importância de refletirmos sobre a diversidade de etnias que ajudaram a moldar nossa cidade, indo além das narrativas tradicionais.
+                        </p>
+
+                        {/* Espaço para Imagem */}
+                        <div className="my-4 text-center">
+                            <img
+                                src="https://www.correiodopovo.com.br/image/contentid/policy:1.381579:1674812867/consciencia.jpg?a=2%3A1&w=680&$p$a$w=7f2aaba"
+                                alt="Imagem ilustrativa sobre o legado afro-brasileiro"
+                                className="rounded-lg shadow-lg object-cover w-full"
+                            />
+                            <p className="text-sm text-gray-600 mt-2">Imagem demonstra o trabalho de Afro-brasileiros na infraestrutura do RS</p>
+                        </div>
+                    </section>
+
+                    {/* Seção sobre os Índios */}
+                    <section className="mb-6">
+                        <h3 className="text-lg font-bold mb-2">🌿 Povos Indígenas no Rio Grande do Sul e Gramado</h3>
+                        <div className="border border-gray-300 rounded-lg p-4 bg-white">
+                            <p className="text-justify mb-2">
+                                Os povos indígenas, como os <strong>Kaingang</strong> e <strong>Guarani</strong>, foram os primeiros habitantes da região onde hoje se encontra o Rio Grande do Sul. Eles ocupavam a serra gaúcha muito antes da chegada dos colonizadores europeus.
+                            </p>
+                            <p className="text-justify mb-2">
+                                Em Gramado, sua presença é sentida através de toponímias como Caí, Taquara, Quilombo, pampa entre outros práticas agrícolas e na profunda conexão com a natureza local. Vivendo em áreas ao redor de rios e florestas, esses povos praticavam caça, coleta e agricultura de subsistência, com destaque para o cultivo de milho e mandioca.
+                            </p>
+                            <p className="text-justify">
+                                Com a chegada dos colonizadores, conflitos surgiram, resultando na expulsão ou exterminação de muitos indígenas. Embora suas histórias tenham sido silenciadas ao longo do tempo, elas continuam presentes na cultura local e merecem ser lembradas.
+                            </p>
+                        </div>
+                    </section>
+
+                    {/* Seção sobre a População Negra */}
+                    <section className="mb-6">
+                        <h3 className="text-lg font-bold mb-2">🖤 Afro-brasileiros e sua Contribuição em Gramado</h3>
+                        <div className="border border-gray-300 rounded-lg p-4 bg-white">
+                            <p className="text-justify mb-2">
+                                A história dos afro-brasileiros em Gramado, embora menos conhecida, é de extrema importância. Durante os períodos colonial e imperial, negros escravizados foram trazidos para a região para trabalhar em plantações, construção de estradas, e outros serviços essenciais. A contribuição desses homens e mulheres foi fundamental para o desenvolvimento das infraestruturas iniciais da cidade.
+                            </p>
+                            <p className="text-justify mb-2">
+                                O trabalho dos negros escravizados foi decisivo na construção de estradas, edificações e no desenvolvimento agrícola da região. Apesar disso, suas histórias foram sendo sistematicamente apagadas ou esquecidas. O Historin visa recuperar e dar visibilidade a essas contribuições, incluindo a presença e o legado afro-brasileiro na memória histórica de Gramado.
+                            </p>
+                            <p className="text-justify">
+                                Gramado reconhece a necessidade de divulgar as histórias e as contribuições culturais e históricas dos afro-brasileiros na formação da cidade, desde o trabalho nas fazendas da Linha Caboclo até as construções e serviços domésticos que moldaram parte significativa da infraestrutura local.
+                            </p>
+                        </div>
+                    </section>
+
+                    {/* Explicação sobre o Artigo Completo */}
+                    <div className="text-justify mb-4">
+                        <p>
+                            O artigo "A Inexistência dos Negros na História de Gramado" de Alex Juarez Müller e Raimundo Nonato Wanderley de Souza Cavalcante, publicado na revista "Em Tempo de Histórias", faz um levantamento preliminar sobre a participação dos afro-brasileiros na história de Gramado. Ele destaca a invisibilização histórica dessa população e a ausência de estudos acadêmicos que abordem o tema, buscando recuperar essas memórias essenciais para uma compreensão mais ampla da história local.
+                        </p>
+                    </div>
+
+                    {/* Botão para o Artigo Completo */}
+                    <div className="text-center mb-6">
+                        <a
+                            href="https://periodicos.unb.br/index.php/emtempos/article/view/31760/26500"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            className="bg-blue-500 text-white px-6 py-3 rounded-md hover:bg-blue-600 transition"
+                        >
+                            Leia o Artigo Completo
+                        </a>
+                    </div>
+
+                    {/* Seção de Histórias Selecionadas */}
+                    <section className="mb-6">
+                        <h3 className="text-lg font-bold mb-4">📚 Histórias Selecionadas</h3>
+                        <div className="space-y-4">
+                            {historiasLegadoAfricano.map(historia => (
+                                <div
+                                    key={historia.id}
+                                    className="bg-white p-4 rounded-lg shadow mb-2 block hover:shadow-lg transition-shadow duration-300 w-full"
+                                >
+                                    <div className="flex flex-col md:flex-row">
+                                        <img
+                                            src={historia.fotos[0] || 'https://placehold.co/150x150'}
+                                            alt={historia.titulo}
+                                            className="rounded-lg mb-4 md:mb-0 md:mr-4 w-full md:w-1/3 object-cover"
+                                        />
+                                        <div className="flex-grow">
+                                            <h3 className="font-semibold text-lg mb-2">{historia.titulo}</h3>
+                                            <p className="text-sm text-gray-600 mb-2">{historia.descricao}</p> {/* Mostrar a descrição completa */}
+                                            <p className="text-sm text-gray-600 flex items-center">
+                                                <span className="mr-4">Ano: {historia.ano}</span>
+                                                <Link
+                                                    to={`/rua/${historia.rua_id}`}
+                                                    className="text-blue-500 hover:underline"
+                                                >
+                                                    Ver na rua
+                                                </Link>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            ))}
+                        </div>
+                    </section>
+
+                </div>
+            );
+        };
 
 
 
