--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
                             <iframe
                                 width="100%"
                                 height="215"
-                                src="https://www.youtube.com/embed/SEU_VIDEO_ID"
+                                src="https://www.youtube.com/embed/1_oyH5Af9fk"
                                 title="YouTube video player"
                                 frameBorder="0"
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
