--- a/index.html
+++ b/index.html
@@ -1529,7 +1529,7 @@
             const [currentZoom, setCurrentZoom] = useState(1);
             const [translateX, setTranslateX] = useState(0);
             const [translateY, setTranslateY] = useState(0);
-            const [showLocaisRecomendados, setShowLocaisRecomendados] = useState(true);
+            const [showLocaisRecomendados, setShowLocaisRecomendados] = useState(false);
 
             // Refs para gerenciar o estado de arrasto
             const isDraggingRef = useRef(false);
