--- a/index.html
+++ b/index.html
@@ -309,8 +309,6 @@
     setEmailSubmitted,
     quizStarted,
     setQuizStarted,
-    timeLeft,
-    setTimeLeft,
 }) => {
     const [score, setScore] = useState(0);
     const [currentQuestion, setCurrentQuestion] = useState(0);
@@ -322,19 +320,18 @@
     const [isCorrect, setIsCorrect] = useState(null);
     const [selectedQuestions, setSelectedQuestions] = useState([]);
 
-    // Function to get 10 random questions
+    // Função para obter 10 perguntas aleatórias
     function getRandomQuestions(allQuestions, num) {
         const shuffled = [...allQuestions].sort(() => 0.5 - Math.random());
         return shuffled.slice(0, num);
     }
 
-    // Save progress to localStorage
+    // Salvar progresso no localStorage
     const saveProgress = () => {
         const quizData = {
             email,
             emailSubmitted,
             quizStarted,
-            timeLeft,
             score,
             currentQuestion,
             selectedAnswerIndex,
@@ -347,14 +344,13 @@
         localStorage.setItem('quizProgress', JSON.stringify(quizData));
     };
 
-    // Load progress from localStorage
+    // Carregar progresso do localStorage
     const loadProgress = () => {
         const savedData = JSON.parse(localStorage.getItem('quizProgress'));
         if (savedData) {
             setEmail(savedData.email || '');
             setEmailSubmitted(savedData.emailSubmitted || false);
             setQuizStarted(savedData.quizStarted || false);
-            setTimeLeft(savedData.timeLeft !== null ? savedData.timeLeft : 600);
             setScore(savedData.score || 0);
             setCurrentQuestion(savedData.currentQuestion || 0);
             setSelectedAnswerIndex(
@@ -368,19 +364,18 @@
         }
     };
 
-    // Load progress when component mounts
+    // Carregar progresso quando o componente é montado
     useEffect(() => {
         if (isOpen) {
             loadProgress();
         }
     }, [isOpen]);
 
-    // Save progress whenever relevant state changes
+    // Salvar progresso sempre que o estado relevante mudar
     useEffect(() => {
         if (quizStarted) saveProgress();
     }, [
         quizStarted,
-        timeLeft,
         currentQuestion,
         score,
         selectedAnswerIndex,
@@ -393,7 +388,7 @@
 
     const handleEmailSubmit = (e) => {
         e.preventDefault();
-        // Send email via Formspree
+        // Enviar email via Formspree
         fetch('https://formspree.io/f/xpwzrpvj', {
             method: 'POST',
             headers: {
@@ -406,18 +401,17 @@
         })
             .then((response) => {
                 if (response.ok) {
-                    // Email submitted successfully
+                    // Email enviado com sucesso
                     setEmailSubmitted(true);
                     setQuizStarted(true);
-                    setTimeLeft(600);
                     setSelectedQuestions(getRandomQuestions(questions, 10));
                 } else {
-                    // Handle error
-                    console.error('Email submission failed');
+                    // Lidar com erro
+                    console.error('Falha ao enviar email');
                 }
             })
             .catch((error) => {
-                console.error('Email submission error:', error);
+                console.error('Erro ao enviar email:', error);
             });
     };
 
@@ -449,7 +443,7 @@
         onClose();
     };
 
-    // Save score and end quiz when all questions are answered
+    // Salvar pontuação e finalizar quiz quando todas as perguntas forem respondidas
     useEffect(() => {
         if (selectedQuestions.length > 0 && currentQuestion >= selectedQuestions.length) {
             const storedScores = JSON.parse(localStorage.getItem('scoresList')) || [];
@@ -457,18 +451,16 @@
             localStorage.setItem('scoresList', JSON.stringify(newScores));
             setScoresList(newScores);
 
-            // Stop the timer and reset quiz state
+            // Resetar estado do quiz
             setQuizStarted(false);
-            setTimeLeft(null);
         }
     }, [currentQuestion]);
 
-    // Start quiz if email is already submitted
+    // Iniciar quiz se o email já foi enviado
     useEffect(() => {
         if (emailSubmitted && !quizStarted) {
             setQuizStarted(true);
             setSelectedQuestions(getRandomQuestions(questions, 10));
-            setTimeLeft(600);
         }
     }, [emailSubmitted, quizStarted]);
 
@@ -487,10 +479,6 @@
                             <div className="flex justify-between items-center mb-4">
                                 <span className="text-lg font-semibold">
                                     Pergunta {currentQuestion + 1} de {selectedQuestions.length}
-                                </span>
-                                <span className="text-lg font-bold">
-                                    Tempo restante: {Math.floor(timeLeft / 60)}:
-                                    {('0' + (timeLeft % 60)).slice(-2)}
                                 </span>
                             </div>
                             <p className="text-lg font-semibold mb-4">
@@ -564,10 +552,9 @@
                             </ul>
                             <button
                                 onClick={() => {
-                                    // Restart quiz without asking for email again
+                                    // Reiniciar quiz sem pedir email novamente
                                     setScore(0);
                                     setCurrentQuestion(0);
-                                    setTimeLeft(600);
                                     setQuizStarted(true);
                                     setSelectedQuestions(getRandomQuestions(questions, 10));
                                 }}
@@ -603,7 +590,7 @@
                     </div>
                 ) : (
                     <div>
-                        {/* Loading or message */}
+                        {/* Carregando ou mensagem */}
                     </div>
                 )}
                 <button
@@ -621,32 +608,8 @@ const Header = ({ setMenuOpen, setShowFeedback }) => {
     const [email, setEmail] = useState('');
     const [emailSubmitted, setEmailSubmitted] = useState(false);
     const [quizStarted, setQuizStarted] = useState(false);
-    const [timeLeft, setTimeLeft] = useState(null);
 
-    // Timer logic
-    useEffect(() => {
-        let timer;
-        if (quizStarted && timeLeft > 0) {
-            timer = setInterval(() => {
-                setTimeLeft((prev) => {
-                    const newTime = prev - 1;
-                    if (newTime <= 0) {
-                        clearInterval(timer);
-                        // Handle quiz end
-                        setQuizStarted(false);
-                        setTimeLeft(null);
-                    }
-                    return newTime;
-                });
-            }, 1000);
-        } else if (!quizStarted || timeLeft === null) {
-            // Ensure timer is cleared if quiz has ended
-            clearInterval(timer);
-        }
-        return () => clearInterval(timer);
-    }, [quizStarted, timeLeft]);
-
-    // Function to share
+    // Função para compartilhar
     const handleShare = () => {
         if (navigator.share) {
             navigator
@@ -673,25 +636,14 @@ const Header = ({ setMenuOpen, setShowFeedback }) => {
             </div>
 
             <div className="flex items-center space-x-4">
-                <div className="flex items-center space-x-4">
-                    {timeLeft !== null && timeLeft > 0 && quizStarted ? (
-                        <span
-                            className={`${buttonStyle} flex items-center text-white font-bold`}
-                            onClick={() => setShowQuiz(true)}
-                        >
-                            <i className="fas fa-clock mr-2"></i>
-                            {Math.floor(timeLeft / 60)}:{('0' + (timeLeft % 60)).slice(-2)}
-                        </span>
-                    ) : (
-                        <button
-                            onClick={() => setShowQuiz(true)}
-                            className={`${buttonStyle} flex items-center`}
-                        >
-                            <i className="fas fa-question-circle mr-2"></i>
-                            Quiz
-                        </button>
-                    )}
-                </div>
+                <button
+                    onClick={() => setShowQuiz(true)}
+                    className={`${buttonStyle} flex items-center`}
+                >
+                    <i className="fas fa-question-circle mr-2"></i>
+                    Quiz
+                </button>
+
                 <QuizModal
                     isOpen={showQuiz}
                     onClose={() => setShowQuiz(false)}
@@ -701,10 +653,9 @@ const Header = ({ setMenuOpen, setShowFeedback }) => {
                     setEmailSubmitted={setEmailSubmitted}
                     quizStarted={quizStarted}
                     setQuizStarted={setQuizStarted}
-                    timeLeft={timeLeft}
-                    setTimeLeft={setTimeLeft}
                 />
-                {/* Share Button */}
+
+                {/* Botão Compartilhar */}
                 <button
                     onClick={handleShare}
                     aria-label="Compartilhar"
@@ -713,7 +664,7 @@ const Header = ({ setMenuOpen, setShowFeedback }) => {
                     <i className="fas fa-share-alt"></i>
                 </button>
 
-                {/* Feedback Button */}
+                {/* Botão Feedback */}
                 <button
                     onClick={() => setShowFeedback(true)}
                     aria-label="Feedback"
@@ -722,7 +673,7 @@ const Header = ({ setMenuOpen, setShowFeedback }) => {
                     <i className="fas fa-comment-dots"></i>
                 </button>
 
-                {/* Menu Button */}
+                {/* Botão Menu */}
                 <div
                     className="text-2xl cursor-pointer hover:text-blue-600"
                     onClick={() => setMenuOpen(true)}
