--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Historin - Histórias das cidades</title>
     <meta name="theme-color" content="#E6D3B4">
-    <link rel="icon" href="fotos/historin-logo.svg" />
+    <link rel="icon" type="image/png" sizes="512x512" href="fotos/icons/historin-logo-512.png" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="Historin">
-    <link rel="apple-touch-icon" href="fotos/historin-logo.svg">
+    <link rel="apple-touch-icon" sizes="512x512" href="fotos/icons/historin-logo-512.png">
 
     <!-- Banco de Dados -->
     <script src="bd.js" defer></script>
