--- a/index.html
+++ b/index.html
@@ -1156,6 +1156,15 @@
                                 />
                                 <p className="text-sm">Feevale</p>
                             </div>
+
+                                                        <div className="text-center">
+                                <img
+                                    src="fotos/orgs/logo-mundo-vapor.png"
+                                    alt="Mundo a Vapor"
+                                    className="mx-auto mb-1 h-12 w-auto"
+                                />
+                                <p className="text-sm">Mundo a Vapor</p>
+                            </div>
                             {/* Adicione mais logos ou itens aqui se necessário */}
                         </div>
                     </section>
