--- a/index.html
+++ b/index.html
@@ -49,11 +49,15 @@
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-6RZP5DGP0E"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-6RZP5DGP0E', { 'send_page_view': false });
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      
+      // Initial page view tracking
+      gtag('event', 'page_view', {
+        page_title: document.title,
+        page_location: window.location.href,
+        page_path: window.location.pathname + window.location.search
+      });
     </script>
 
 </head>
@@ -3556,5 +3560,6 @@ const Preview = ({ previewContent, onClose }) => {
     </script>
 
 </body>
+
 
 </html>
