--- a/index.html
+++ b/index.html
@@ -48,17 +48,13 @@
     <link rel="stylesheet" href="styles3.5.css" />
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-6RZP5DGP0E"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      
-      // Initial page view tracking
-      gtag('event', 'page_view', {
-        page_title: document.title,
-        page_location: window.location.href,
-        page_path: window.location.pathname + window.location.search
-      });
-    </script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6RZP5DGP0E');
+</script>
 
 </head>
 
@@ -3563,3 +3559,4 @@ const Preview = ({ previewContent, onClose }) => {
 
 
 </html>
+
